--- a/.env
+++ b/.env
@@ -1,3 +1,3 @@
 PORT = 5001
-DATABASE_URL = process.env.DATABASE_URL
+DATABASE_URL = postgresql://neondb_owner:npg_KbOH5WjJkq8f@ep-misty-mountain-aeph1a6h-pooler.c-2.us-east-2.aws.neon.tech/neondb?sslmode=require&channel_binding=require
 NODE_ENV = development
