--- a/package.json
+++ b/package.json
@@ -10,8 +10,8 @@
   "scripts": {
     "dev": "nodemon src/server.js",
     "start": "node src/server.js",
-    "generate": "drizzle-kit generate --config=src/config/drizzle.config.js",
-    "migrate": "drizzle-kit migrate --config=drizzle.config.js"
+    "generate": "drizzle-kit generate --config=./drizzle.config.js",
+    "migrate": "drizzle-kit migrate --config=./drizzle.config.js"
   },
   "type": "module",
   "devDependencies": {
