--- a/.env
+++ b/.env
@@ -2,3 +2,5 @@ PORT = 5001
 DATABASE_URL = postgresql://neondb_owner:npg_KbOH5WjJkq8f@ep-misty-mountain-aeph1a6h-pooler.c-2.us-east-2.aws.neon.tech/neondb?sslmode=require&channel_binding=require
 NODE_ENV = development
 EXPO_PUBLIC_CLERK_PUBLISHABLE_KEY=pk_test_c3VyZS1iaXJkLTk2LmNsZXJrLmFjY291bnRzLmRldiQ
+
+API_URL = https://recipe-booking-backend.onrender.com
